Added a few fonctions, modified equal button
The calculator can do the basics operations. I now have to implement
some input control :
- when the user typed a decimal number and clicks a second time on the
'.',
- when the user clicks on an operator followed by another operator,
- etc.

I don't need an equal button, so I moved it and it is now a button to
clear the last character. The javascript part for it is not yet
implemented.

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -47,6 +47,7 @@ body {
 	font-size: 66px;
 	font-weight: 200;
 	text-align: right;
+	cursor: pointer;
 }
 
 #calculator-pad-operators {
@@ -94,19 +95,24 @@ body {
 	border-radius: 51%;
 }
 
-.equal {
+#correct {
 	width: 58px;
 	height: 58px;
+	margin: 6px; /* =(num.width - correct.width)/2 */
 	color: #272323;
-	font-size: 40px;
-	line-height: 54px;
+	line-height: 58px;
 	margin-top: 5px;
 	background-color: #e6f924;
+	float: left;
 	transition: none;
+	-moz-box-shadow: 0px 20px 15px -15px #262323;
+	-webkit-box-shadow: 0px 20px 15px -15px #262323;
+	-o-box-shadow: 0px 20px 15px -15px #262323;
+	box-shadow: 0px 20px 15px -15px #262323;
 }
 
-.equal:hover {
-	background-color: #64dd17  ;
+#correct:hover {
+	background-color: #ff6f00;
 }
 
 
