--- a/css/calculator.css
+++ b/css/calculator.css
@@ -55,6 +55,7 @@ body {
 	color: #ffffff;
 	width: 305px;
 	height: 70px;
+	margin: 0 0.5px;
 	-moz-box-shadow: 0px 20px 15px -15px #262323;
 	-webkit-box-shadow: 0px 20px 15px -15px #262323;
 	-o-box-shadow: 0px 20px 15px -15px #262323;
@@ -62,14 +63,17 @@ body {
 }
 
 .operator, .operator:hover {
-	width: 25%;
+	width: 70px;
 	height: 70px;
 	float: left;
+	margin: 0 3px;
+	padding: 0;
 	background: none;
 	box-shadow: none;
 	font-size: 38px;
 	text-align: center;
 	line-height: 62px;
+	border-radius: 50%;
 	transition: none;
 }
 
