--- a/css/calculator.css
+++ b/css/calculator.css
@@ -15,6 +15,7 @@ body {
 }
 
 /* Calculator text --------------------------------*/
+
 #calculator {
 	background-color: #393535;
 	font-family: 'Roboto', "Segoe UI", Segoe, 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -45,7 +46,7 @@ body {
 #calculator-screen-result {
 	color: #565151;
 	font-size: 66px;
-	line-height: 66px
+	line-height: 66px;
 	font-weight: 200;
 	text-align: right;
 	cursor: pointer;
@@ -56,7 +57,6 @@ body {
 	color: #ffffff;
 	width: 305px;
 	height: 70px;
-	margin: 0 0.5px;
 	-moz-box-shadow: 0px 20px 15px -15px #262323;
 	-webkit-box-shadow: 0px 20px 15px -15px #262323;
 	-o-box-shadow: 0px 20px 15px -15px #262323;
@@ -87,6 +87,7 @@ body {
 	height: 70px;
 	padding: 0 47.5px;
 }
+
 .num {
 	width: 70px;
 	height: 70px;
@@ -103,7 +104,8 @@ body {
 #correct {
 	width: 58px;
 	height: 58px;
-	margin: 6px; /* =(num.width - correct.width)/2 */
+	margin: 6px;
+	/* =(num.width - correct.width)/2 */
 	color: #272323;
 	line-height: 58px;
 	margin-top: 5px;
